Changes links from github.com/SokoloffA to github.com/flacon

--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@ menuItem: home
 <p>
 <h2>Screenshot</h2>
 {% include gallery_img.html img="screenshots/flacon-1.png" preview="screenshots/flacon-1-small.png" %}
-<p><a href="{{ site.baseurl}}/screenshots">More screenshots</a></p>
+<p><a href="/screenshots">More screenshots</a></p>
 </p>
