--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -4,14 +4,20 @@ title: Flacon - Screenshots
 menuItem: screenshots
 
 carousel_images:
-  - preview:     flacon-1-small.png
-    full:        flacon-1.png
+  - preview:     flacon-main-small.png
+    full:        flacon-main.png
     description: Main window
-  - preview:     flacon-2-small.png
-    full:        flacon-2.png
+
+  - preview:     flacon-cover-small.png
+    full:        flacon-cover.png
+    description: Disk cover dialog
+
+  - preview:     flacon-convert-small.png
+    full:        flacon-convert.png
     description: Conversion process
-  - preview:     flacon-3-small.png
-    full:        flacon-3.png
+
+  - preview:     flacon-config-small.png
+    full:        flacon-config.png
     description: Configure dialog
 ---
 
