--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -17,7 +17,12 @@ screenshots:
 
   - preview:     flacon-config-small.png
     full:        flacon-config.png
-    description: Preferences dialog
+    description: Preferences dialog - Audio settings
+
+  - preview:     preferences-cue-cover.png
+    full:        preferences-cue-cover.png
+    description: Preferences dialog - CUE & Cover settings
+
 ---
 
 {% for scr in page.screenshots %}
